# MatrixLibrary

./: README.md
src/: CMakeLists.txt  eq_matrix.cpp  helpers.cpp  lint.sh  matrix_constructors.cpp  matrix_exceptions.h  s21_calc_complements.cpp  s21_determinant.cpp  s21_eq_matrix.cpp  s21_inverse_matrix.cpp  s21_matrix_oop.h  s21_mult_matrix.cpp  s21_mult_number.cpp  s21_operators.cpp  s21_sub_matrix.cpp  s21_sum_matrix.cpp  s21_transpose.cpp
src/test/: test.cpp  test_calc_complements.cpp  test_determinant.cpp  test_eq_matrix.cpp  test_helpers.cpp  test_inverse_matrix.cpp  test_matrix_constructors.cpp  test_mult_matrix.cpp  test_mult_number.cpp  test_operators.cpp  test_sub_matrix.cpp  test_sum_matrix.cpp  test_transpose.cpp
